# dungeon-mvp

./: .gitignore  Cargo.toml  DESIGN.md  GAME.md  ISSUES.md  LESSONS.md  LICENSE  PROTOCOLS.md  README.md  REASONIX.md  RULE.md  fix_cd.py
.reasonix/truncated-results/: 1782908629728-6b62d51d-filesystem_directory_tree.txt  1782994141643-fb02e1df-run_command.txt
assets/: items.json
dungeon-action/: Cargo.toml
dungeon-action/src/: actions.rs  execute.rs  lib.rs  monster.rs  player.rs  tests.rs  tick.rs  types.rs
dungeon-core/: Cargo.toml
dungeon-core/src/: action.rs  action_types.rs  ai.rs  api.rs  color.rs  components.rs  fov.rs  global.rs  items.rs  lib.rs  map_gen.rs  monster_def.rs  ops.rs  pathfinding.rs  resources.rs  save.rs  systems.rs  tests.rs
dungeon-render/: Cargo.toml
dungeon-render/src/: color.rs  lib.rs  pipeline.rs  timeline.rs  title.rs  ui.rs
dungeon-world/: Cargo.toml
dungeon-world/src/: fov.rs  init.rs  lib.rs  loot.rs  persist.rs  population.rs  systems.rs  tests.rs  tick.rs
src/: input.rs  inventory.rs  keymap.rs  lib.rs  main.rs  throw.rs
tests/: scenario_test.rs
