[package]
name = "dungeon-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.16"
crossterm = "0.29.0"
ratatui = "0.30.2"
dungeon-core = { path = "dungeon-core" }
dungeon-action = { path = "dungeon-action" }
dungeon-world = { path = "dungeon-world" }
dungeon-render = { path = "dungeon-render" }
bincode = "1.3"

[workspace]
members = ["dungeon-core", "dungeon-action", "dungeon-world", "dungeon-render", "terrain-forge"]
